fixed front page layout issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -167,6 +167,7 @@ p.sign-up-desc {
 .body > h2 {
   font-size: 38px;
   margin-top: 100px;
+  width: 550px;
 }
 
 #body-home {
